Fix landing photo: set header height 0 so photo fills behind navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ html {
 
 /* BEGIN NAV BAR */
 header {
-  height: 56px;
+  height: 0;
 }
 
 #mainNav {
